log
Sun, Aug 17, 2025  7:13:45 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Aug 17, 2025  7:20:47 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
3d530a7
Sun, Aug 17, 2025  7:29:44 PM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + numero;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
a762876
Sun, Aug 17, 2025  7:31:31 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
60a14e2
Sun, Aug 17, 2025  7:57:38 PM: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:107:30: error: 'axu' undeclared (first use in this function)
    while((numero = (int*)pop(axu)) != NULL{
                              ^~~
exercises.c:107:30: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:107:43: error: expected ')' before '{' token
    while((numero = (int*)pop(axu)) != NULL{
                                           ^
exercises.c:110:1: error: expected expression before '}' token
 }
 ^
Compilation failed
83f76af
Sun, Aug 17, 2025  8:10:08 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
947e1c5
Sun, Aug 17, 2025  8:21:45 PM: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ba026b7
Sun, Aug 17, 2025  8:22:18 PM: 
test.c: In function 'test_copia_pila':
test.c:175:5: error: implicit declaration of function 'copia_pila' [-Werror=implicit-function-declaration]
     copia_pila(P1, P2);
     ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e3d24ee
Sun, Aug 17, 2025  8:30:41 PM: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:121:11: error: unused variable 'pila' [-Werror=unused-variable]
    Stack *pila = create_stack();
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6ac5166
Sun, Aug 17, 2025  8:30:54 PM: 
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:121:11: error: unused variable 'pila' [-Werror=unused-variable]
    Stack *pila = create_stack();
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0d7299d
Sun, Aug 17, 2025  8:31:30 PM: 
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:121:11: error: unused variable 'pila' [-Werror=unused-variable]
    Stack *pila = create_stack();
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cdaa844
